Corrected of a layout bug with the card layout

--- a/ZONE-watcher/app/assets/stylesheets/items.css.scss
+++ b/ZONE-watcher/app/assets/stylesheets/items.css.scss
@@ -38,3 +38,7 @@ a.label:visited{
 .clear-right {
   clear: right;
 }
+
+.item-bloc:nth-child(odd).span5{
+  margin-left:0;
+}
